# deekay

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deekay.js  make_extension.sh  manifest.firefox.json  manifest.json  pyproject.toml  web-ext-config.js
.github/ISSUE_TEMPLATE/: missingurl.yml
.github/workflows/: lint.yml  publish.yml
deekay/: best_prefixes.py  bloom_filter.py  gen_bloom_filter.py  gen_hashes.py  gen_perfect_hash.py  test_perfect_hash.py  utils.py
hashes/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  0a.json  0b.json  0c.json  0d.json  0e.json  0f.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  1a.json  1b.json  1c.json  1d.json  1e.json  1f.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  (+216 more)
